# spatial-ir-pipeline

./: .gitignore  .nf-core.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  CHANGELOG.md  CITATIONS.md  LICENSE  README.md  env.yml  main.nf  modules.json  nextflow.config  nextflow_schema.json  nf-test.config  pyproject.toml
.cirro/: preprocess.py  preprocess_test.py  process-compute.config  process-form.json  process-input.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/get-shards/: action.yml
.github/actions/nf-test/: action.yml
.github/workflows/: format_and_lint.yml  nf-test.yml  test.yml
assets/: adaptivecard.json  email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yml  schema_input.json  sendmail_template.txt  slackreport.json
conf/: base.config  modules.config  test.config  test_full.config
docs/: README.md  output.md  usage.md
lib/: NfcoreTemplate.groovy  Utils.groovy  WorkflowMain.groovy
modules/local/align/: main.nf
modules/local/align/templates/: mixcr.py
modules/local/align/tests/: main.nf.test  main.nf.test.snap  nextflow.config
modules/local/diversity/: main.nf
modules/local/diversity/templates/: diversity.py
modules/local/diversity/tests/: main.nf.test
modules/local/ir_summary/: main.nf
modules/local/ir_summary/templates/: ir_summary.py
modules/local/ir_summary/tests/: main.nf.test  main.nf.test.snap
modules/local/load/: main.nf
modules/local/load/templates/: load_visium.py
modules/local/load/tests/: main.nf.test  main.nf.test.snap
modules/local/merge_sdata/: main.nf
modules/local/preprocess/: main.nf
modules/local/spatialplots/: main.nf
modules/nf-core/quartonotebook/: main.nf
subworkflows/local/align/: main.nf
subworkflows/local/ir_summary/: main.nf
subworkflows/local/prepare_report_inputs/: main.nf
subworkflows/local/utils_nfcore_spatial-ir-pipeline_pipeline/: main.nf
tests/: default.nf.test  main.nf.test  nextflow.config  test.csv
tests/data/: samples.csv  samples_bad_path.csv  samples_full.csv  samples_test_mixcr.csv  spatial-ir-pipeline_software_versions.yml  workflow_summary.yaml
workflows/: spatial-ir-pipeline.nf  spatial-ir.nf
(+31 files in other folders)
