

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spatial-ir-pipeline"

requires-python = ">=3.10"
dependencies = [
    "cirro",
    "circuss @ git+https://github.com/DSidLab/circuss.git@main",
    "sidus @ git+https://github.com/AstroPathJHU/sidus.git@main"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pylint",
    "pytest",
    "pylint-pytest",
    "pre-commit",
]

[tool.black]
line-length = 120
