
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-ir-pipeline"
version = "0.0.0"


requires-python = ">=3.10"
dependencies = [
    "cirro",
    "circuss @ git+https://github.com/DSidLab/circuss.git@main",
    "sidus @ git+https://github.com/AstroPathJHU/sidus.git@main"
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pylint",
    "pytest",
    "pylint-pytest",
    "pre-commit",
]

[tool.black]
line-length = 120
