
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-ir-pipeline"
version = "0.0.0"

requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "cirro",
    "circuss @ git+https://github.com/DSidLab/circuss.git@main",
    "sidus @ git+https://github.com/AstroPathJHU/sidus.git@main",
]

test = [
    "black",
    "flake8",
    "numpy",
    "pandas",
    "pylint",
    "pytest",
    "pylint-pytest",
    "pre-commit"
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:Importing read_text from `anndata` is deprecated.', # spatialdata io
    'ignore:pkg_resources is deprecated as an API.', # xarray_schema
    'ignore:Deprecated call to `pkg_resources.:DeprecationWarning', # xarray_schema
    'ignore:The legacy Dask DataFrame implementation is deprecated', # spatialdata
    'ignore:This package has been superseded by the `leidenalg`', # scanpy
    "ignore: 'mode' parameter is deprecated and will be.", # matplotlib
]
